--- a/doc/manuscript.Rmd
+++ b/doc/manuscript.Rmd
@@ -72,13 +72,13 @@ From each of the 30 plots, we collected 500 g of soil to analyse soil physicoche
 
 ## Plant, fungal and bacterial diversity sampling
 
-In each plot, we recorded all the spontaneous vascular plant species, as well as the cover (%) of each species in the plot. Plant species names follow Euro+Med [@RN5044]. Additionally, from each of the 30 plots, we collected soil samples for DNA metabarcoding of fungal and bacterial (including Archaea) communities. We performed the sampling in sterile conditions, and always before entering the plot for any of the other tasks. We cleaned and sterilized all tools with water and ethanol between samples. In each plot, we took samples from the four cardinal points, 0.5 m inwards from the edge, at a depth of 5 cm. Before taking the samples, we removed the vegetation with a sterile tool. Then, we collected the soil samples in a 50 ml Falcon tube, mixed them, homogenized them with a lancet and finally stored the sample in a 2 ml Eppendorf tube which we immediately froze. The frozen tubes were sent to AllGenetics & Biology SL (A Coruña, Spain) for DNA metabarcoding analysis. The DNA analysis included DNA extraction; library preparation with 2 pairs of different primers specific for barcoding (ITS for fungi, and 16S for bacteria); sequencing on an Illumina NovaSeq PE250 platform (assuming an amplicon size \< 450 bp); and standard bioinformatic analysis including demultiplexing, quality control and sample preprocessing, inference of Amplicon Sequence Variants (ASVs), taxonomic assignment, number of reads per taxon and generation of rarefaction curves (see **Appendix S1** for extended DNA metabarcoding methodology).
+In each plot, we recorded all the spontaneous vascular plant species, as well as the cover (%) of each species in the plot. Plant species names follow Euro+Med [@RN5044]. Additionally, from each of the 30 plots, we collected soil samples for DNA metabarcoding of fungal and bacterial (including Archaea) communities. We performed the sampling in sterile conditions, and always before entering the plot for any of the other tasks. We cleaned and sterilized all tools with water and ethanol between samples. In each plot, we took samples from the four cardinal points, 0.5 m inwards from the edge, at a depth of 5 cm. Before taking the samples, we removed the vegetation with a sterile tool. Then, we collected the soil samples in a 50 ml Falcon tube, mixed them, homogenized them with a lancet and finally stored the sample in a 2 ml Eppendorf tube which we immediately froze. The frozen tubes were sent to AllGenetics & Biology SL (A Coruña, Spain) for DNA metabarcoding analysis. The DNA analysis included DNA extraction; library preparation with 2 pairs of different primers specific for barcoding (ITS for fungi, and 16S for bacteria); sequencing on an Illumina NovaSeq PE250 platform (assuming an amplicon size \< 450 bp); and standard bioinformatic analysis including demultiplexing, quality control and sample preprocessing, inference of Amplicon Sequence Variants (ASVs), taxonomic assignment, number of reads per taxon and generation of rarefaction curves (see **Supplementary material 1** for extended DNA metabarcoding methodology).
 
 ## Statistical analysis and compositional novelty index
 
 We performed all analyses using R version 4.3.1 [@RN5387] and the package *tidyverse* [@RN4662] for data manipulation and visualization. To describe soil temperatures as recorded by the dataloggers, we calculated the mean annual temperature, the mean diurnal range and the annual range. To assess the variability in soil physicochemical properties, we conducted a Principal Component Analysis (PCA) as implemented in the R package *FactoMineR* [@RN3166] and a correlation analysis to detect auto-correlated soil variables. Multivariate analyses of community composition were performed in *vegan* [@RN5386]: we used PERMANOVA to test differences between habitat types in their soil variables and their composition of plant species, fungal ASVs and bacterial ASVs; Non-metric Multi-Dimensional Scaling (NMDS, see details below) ordination to assess variation in taxonomic composition of plants (for comparison with fungal and bacterial communities, we used presence/absence of plant species, instead of cover), fungi (presence/absence of ASVs) and bacteria (presence/absence of ASVs); and environmental fitting to test the correlation between community ordination axes and soil physicochemical properties.
 
-To calculate a compositional novelty index, we used the NMDS multidimensional distance from each urban plot (i.e., park, roadside, residential or industrial) to the centroid of the two reference pre-urban habitats (i.e., forests and meadows). We calculated compositional novelty separately for plant, fungal and bacterial communities. Because NMDS employs an iterative algorithm to seek optimal solutions, the results may vary across different computational runs, leading to inconsistencies in ordination outcomes. Therefore, we also considered an alternative ordination method based on eigenvalue decomposition (Principal Component Analysis PCA with Hellinger transformation). Choosing NMDS or PCA did not affect in any way the final output and interpretation of the analyses, and therefore we decided to use NMDS for the final presentation of results, since it makes less assumptions about data and is therefore a more flexible technique that can be applied to a wider variety of datasets. We computed NMDS using the Bray-Curtis distance. When using NMDS for assessing variation in taxonomic composition, we fitted the analysis to 2 dimensions, since the goal was visualization of the biplot. In this case, the best solution was achieved after 20 runs for plants (stress = 0.15), 20 runs for fungi (stress = 0.12) and 20 runs for bacteria (stress = 0.09). When using NMDS for calculating novelty, we fitted the analysis to 4 dimensions, to allow for a better fit. In this case, the best solution was achieved after 20 runs for plants (stress = 0.08), 20 runs for fungi (stress = 0.07) and 20 runs for bacteria (stress = 0.04). The plot-centroid distances (i.e., the novelty index) were calculated by summing the distances in each of the four dimensions.
+To calculate a compositional novelty index, we used the NMDS multidimensional distance from each urban plot (i.e., park, roadside, residential or industrial) to the centroid of the two reference pre-urban habitats (i.e., forests and meadows). We calculated compositional novelty separately for plant, fungal and bacterial communities. Because NMDS employs an iterative algorithm to seek optimal solutions, the results may vary across different computational runs, leading to inconsistencies in ordination outcomes. Therefore, we also considered alternative ordination methods based on eigenvalue decomposition (Principal Component Analysis PCA with Hellinger transformation, and Principal Coordinates Analysis PCoA of a Bray–Curtis dissimilarity matrix). The final output and interpretation of the analyses remained stable independently of the ordination method used, and therefore we decided to use NMDS for the final presentation of results, since it makes fewer assumptions about data and is therefore a more flexible technique that can be applied to a wider variety of datasets. We computed NMDS using the Bray-Curtis distance. When using NMDS for assessing variation in taxonomic composition, we fitted the analysis to 2 dimensions, since the goal was visualization of the biplot. In this case, the best solution was achieved after 20 runs for plants (stress = 0.15), 20 runs for fungi (stress = 0.12) and 20 runs for bacteria (stress = 0.09). When using NMDS for calculating novelty, we fitted the analysis to 4 dimensions, to allow for a better fit. In this case, the best solution was achieved after 20 runs for plants (stress = 0.08), 20 runs for fungi (stress = 0.07) and 20 runs for bacteria (stress = 0.04). The plot-centroid distances (i.e., the novelty index) were calculated by summing the distances in each of the four dimensions.
 
 After calculating the novelty indices, we tested the effect of taxonomic group (plant, fungi and bacteria), pre-urban reference habitat (forest or meadow), urban habitat (park, roadside, residential or industrial) and soil physicochemical variables (after reducing their dimensionality by ordination analysis, see results for more details) on compositional novelty, by fitting a Linear Mixed Model with the package *nlme* [@RN2333]. Total sample size in the model was 120 (5 plots x 4 urban habitats x 2 reference habitats x 3 taxonomic groups). Because each sampling plot was included in the model six times (2 reference habitats x 3 taxonomic groups), the model included plot as a random factor. We checked and confirmed model assumptions using the package *performance* [@RN5684]. 
 
@@ -86,15 +86,15 @@ After calculating the novelty indices, we tested the effect of taxonomic group (
 
 ## Soil properties across habitats
 
-Soil temperature records (**Figure 2A**) indicated that forest soil was relatively buffered in its thermal range of variation, with a mean annual temperature of 13.9 ºC, a mean diurnal range of 1.8 ºC and an annual range of 10.8 ºC. Meadow and urban plots had more thermal oscillation, with a mean annual temperature between 12.4 ºC (roadsides) and 16.8 ºC (meadows), a mean diurnal range between 3.8 ºC (roadsides) and 4.6 ºC (residential lots), and an annual range between 16.5 ºC (residential lots) and 19.5 ºC (meadows). 
+Soil temperature records (**Figure 2A**) indicated that the forest soil was relatively buffered in its thermal range of variation, with a mean annual temperature of 13.9 ºC, a mean diurnal range of 1.8 ºC and an annual range of 10.8 ºC. Meadow and urban plots had more thermal oscillation, with a mean annual temperature between 12.4 ºC (roadsides) and 16.8 ºC (meadows), a mean diurnal range between 3.8 ºC (roadsides) and 4.6 ºC (residential lots), and an annual range between 16.5 ºC (residential lots) and 19.5 ºC (meadows). 
 
-The PCA ordination of the soil physicochemical properties (**Appendix S2**) indicated that the first axis of variation, explaining 23% of the variance, ordered soils according to the concentration of heavy metals. The variables with the highest contribution to this axis (\> 10%) were the soil contents in Pb, Cu, Zn, Cd and Cr. This first axis did not separate urban from pre-urban habitats: for example, while some industrial lots had a very high concentration of Pb and other metals, the median Pb value of the industrial habitat was below the median value of forests (**Figure 2B**; **Appendix S2**).
+The PCA ordination of the soil physicochemical properties (**Supplementary material 2**) indicated that the first axis of variation, explaining 23% of the variance, ordered soils according to the concentration of heavy metals. The variables with the highest contribution to this axis (\> 10%) were the soil contents in Pb, Cu, Zn, Cd and Cr. This first axis did not separate urban from pre-urban habitats: for example, while some industrial lots had a very high concentration of Pb and other metals, the median Pb value of the industrial habitat was below the median value of forests (**Figure 2B**; **Supplementary material 2**).
 
-The second PCA axis (**Appendix S2**) explained 21% of the variance and ordered soils according to their compaction and water retention capacities, with the highest contributing variables (\> 10%) being organic matter content, bulk density, N concentration and pH. This axis separated soils according to their habitat: for example, forests had high organic matter and N content, while industrial vacant lots had higher bulk density and pH (**Figure 2B**; **Appendix S2**). 
+The second PCA axis (**Supplementary material 2**) explained 21% of the variance and ordered soils according to their compaction and water retention capacities, with the highest contributing variables (\> 10%) being organic matter content, bulk density, N concentration and pH. This axis separated soils according to their habitat: for example, forests had high organic matter and N content, while industrial vacant lots had higher bulk density and pH (**Figure 2B**; **Supplementary material 2**). 
 
-The third PCA axis (**Appendix S2**) explained 10% of the variability and ordered soils according to their content in Mg, with the highest contributing variables (\>10%) being Mg content, Mg/K ratio and conductivity. In this case, like for the first axis, there was no clear separation between habitats, with industrial sites having some of the highest and lowest values (**Figure 2B**; **Appendix S2**). 
+The third PCA axis (**Supplementary material 2**) explained 10% of the variability and ordered soils according to their content in Mg, with the highest contributing variables (\>10%) being Mg content, Mg/K ratio and conductivity. In this case, as for the first axis, there was no clear separation between habitats, with industrial sites having some of the highest and lowest values (**Figure 2B**; **Supplementary material 2**). 
 
-The analysis showed strong correlations within the groups of variables contributing to the first, second and third PCA axes (**Appendix S2**). For further analyses we kept these three axes as explanatory variables. For simplicity, we will refer to each axis by the name of its most explanatory variable (PC1 = Pb; PC2 = organic matter (OM); PC3 = Mg). 
+The analysis showed strong correlations within the groups of variables contributing to the first, second and third PCA axes (**Supplementary material 2**). For further analyses we kept these three axes as explanatory variables. For simplicity, we will refer to each axis by the name of the explanatory variable most strongly associated with that axis (PC1 = Pb; PC2 = organic matter (OM); PC3 = Mg). 
 
 As previously indicated by PCA, organic matter was the only soil property with a clear pattern of variation by habitat: a decrease from pre-urban to urban habitats (**Figure 2B**). PERMANOVA supported that there was not a significant difference between habitats in their soil physicochemical properties (100,000 permutations, R^2^ = 0.19, F = 1.15, p = 0.31).
 
@@ -104,11 +104,11 @@ knitr::include_graphics("../results/figures/Fig2.png")
 
 ## Plant, fungal and bacterial communities across habitats
 
-The survey of spontaneous plant diversity yielded 216 species, with the average richness per plot being 26 (min = 10, max = 38). Of these species, 48% were found only in urban habitats (parks, roadsides, residential lots and industrial lots), 27% occurred only in pre-urban habitats (forests and meadows) and 25% were shared by both urban and pre-urban habitats (**Fig3A**). On average, the habitat with the highest richness per plot was industrial lots (29 species), followed by residential lots (27), roadsides (24), meadows (23), parks (20) and forests (18). The most frequent species were *Holcus lanatus* (22 plots), *Plantago lanceolata* (20), *Helminthotheca echioides* (16), *Dactylis glomerata* (15) and *Lotus corniculatus* (14). PERMANOVA supported that the plant species composition was significantly different across habitats (100,000 permutations, R^2^ = 0.42, F = 3.48, p = \< 0.001). The NMDS ordination of the plant species composition (**Fig. 3D**) indicated that the plots belonging to the same habitat were relatively grouped together. The major gradient in vegetation composition along the first axis was a separation between forest plots and the other habitats. Environmental fitting of the Pb, organic matter and Mg vectors onto the ordination indicated that only Pb had a significant correlation (R^2^ = 0.29, p = 0.008) with the composition of the fungal communities. High values of Pb (and other heavy metals) were associated with the plant communities from industrial vacant lots and roadsides (**Fig. 3D**).
+The survey of spontaneous plant diversity yielded 216 species, with the average richness per plot being 26 (min = 10, max = 38). Of these species, 48% were found only in urban habitats (parks, roadsides, residential lots and industrial lots), 27% occurred only in pre-urban habitats (forests and meadows) and 25% were shared by both urban and pre-urban habitats (**Fig3A**). On average, the habitat with the highest richness per plot was industrial lots (29 species), followed by residential lots (27), roadsides (24), meadows (23), parks (20) and forests (18). The most frequent species were *Holcus lanatus* (22 plots), *Plantago lanceolata* (20), *Helminthotheca echioides* (16), *Dactylis glomerata* (15) and *Lotus corniculatus* (14). PERMANOVA supported that the plant species composition was significantly different across habitats (100,000 permutations, R^2^ = 0.42, F = 3.48, p = \< 0.001). The NMDS ordination of the plant species composition (**Fig. 3D**) indicated that the plots belonging to the same habitat were relatively grouped together. The major gradient in vegetation composition along the first axis was a separation between forest plots and the other habitats. Environmental fitting of the soil property axes PC1, PC2, and PC3 onto the ordination indicated that only PC1 (mainly explained by Pb) had a significant correlation (R^2^ = 0.29, p = 0.008) with the plant community composition. High values of Pb (and other heavy metals) were associated with the plant communities from industrial vacant lots and roadsides (**Fig. 3D**).
 
-The DNA metabarcoding of soil fungal communities resulted in 4,689 amplicon sequence variants (ASVs). Of these, 46% were only found in urban habitats (parks, roadsides, residential lots and industrial lots), 36% occurred only in pre-urban habitats (forests and meadows) and 18% were shared by both urban and pre-urban habitats (**Fig3B**). The average number of ASVs per plot was 340 (min = 174, max = 587), with the habitat averages decreasing from residential vacant lots (415) to forests (393), meadows (336), parks (323), industrial vacant lots (300) and roadsides (276). The majority of ASVs were assigned to Ascomycota (56%), followed by Basidiomycota (24%), Rozellomycota (10%) and Glomeromycota (4%). Forest habitats had the highest proportion of Basidiomycota (25% vs. \< 17% in the other habitats) and the lowest proportion of Ascomycota (57% vs. \> 64%). The proportion of Rozellomycota was similar across habitats (from 6% in meadows to 11% in parks). The proportion of Glomeromycota varied between 5% in meadows to 0.5% in forests. PERMANOVA performed on the presence/absence of ASVs indicated significant differences in composition between habitats (100,000 permutations, R^2^ = 0.33, F = 2.39, p = \< 0.001). The NMDS ordination of the fungal ASV composition (**Fig. 3E**) behaved similarly to the ordination of plant communities, with plots tending to group by habitat, and the major compositional gradient reflecting the separation between forest plots and the rest. Environmental fitting of the Pb, organic matter and Mg vectors onto the ordination indicated that only organic matter had a significant correlation (R^2^ = 0.46, p \< 0.001) with the composition of the fungal communities. Low organic matter content was associated with the fungal communities from industrial vacant lots and roadsides (**Fig. 3E**).
+The DNA metabarcoding of soil fungal communities resulted in 4,689 amplicon sequence variants (ASVs). Of these, 46% were only found in urban habitats (parks, roadsides, residential lots and industrial lots), 36% occurred only in pre-urban habitats (forests and meadows) and 18% were shared by both urban and pre-urban habitats (**Fig3B**). The average number of ASVs per plot was 340 (min = 174, max = 587), with the habitat averages decreasing from residential vacant lots (415) to forests (393), meadows (336), parks (323), industrial vacant lots (300) and roadsides (276). The majority of ASVs were assigned to Ascomycota (56%), followed by Basidiomycota (24%), Rozellomycota (10%) and Glomeromycota (4%). Forest habitats had the highest proportion of Basidiomycota (25% vs. \< 17% in the other habitats) and the lowest proportion of Ascomycota (57% vs. \> 64%). The proportion of Rozellomycota was similar across habitats (from 6% in meadows to 11% in parks). The proportion of Glomeromycota varied between 5% in meadows to 0.5% in forests. PERMANOVA performed on the presence/absence of ASVs indicated significant differences in composition between habitats (100,000 permutations, R^2^ = 0.33, F = 2.39, p = \< 0.001). The NMDS ordination of the fungal ASV composition (**Fig. 3E**) behaved similarly to the ordination of plant communities, with plots tending to group by habitat, and the major compositional gradient reflecting the separation between forest plots and the rest. Environmental fitting of the soil property axes PC1, PC2, and PC3 onto the ordination indicated that only PC2 (mainly explained by organic matter) had a significant correlation (R^2^ = 0.46, p \< 0.001) with the fungal community composition. Low organic matter content was associated with the fungal communities from industrial vacant lots and roadsides (**Fig. 3E**).
 
-For bacterial communities, DNA metabarcoding yielded 16,306 ASVs. Of these, 44% were found only in urban habitats (parks, roadsides, residential lots and industrial lots), 31% occurred only in pre-urban habitats (forests and meadows) and 25% were shared by both urban and pre-urban habitats (**Fig3C**). The average number of ASVs per plot was 1769 (min = 1478, max = 2074), with the habitat averages decreasing from roadsides (1848) to industrial lots (1794), residential lots (1792), meadows (1775), parks (1706) and forests (1697). The majority of ASVs were assigned to Proteobacteria (22%), Planctomycetota (15%), Actinobacteriota (15%) and Acidobacteriota (10%). Compared to other habitats, forests had higher proportions of Proteobacteria and Acidobacteriota, a lower proportion of Actinobacteriota, and a similar proportion of Planctomycetota. PERMANOVA performed on the presence/absence of ASVs indicated significant differences in composition between habitats (100,000 permutations, R^2^ = 0.32, F = 2.51, p = \< 0.001). The NMDS ordination of the bacterial ASV composition (**Fig. 3F**) resulted in less grouping by habitat than for plants and fungi, but still reflected a main compositional gradient from forests to industrial vacant plots. As in the case of the fungal communities, environmental fitting of the Pb, organic matter and Mg vectors onto the ordination indicated that only organic matter content had a significant correlation (R^2^ = 0.39, p = 0.001) with the composition of the bacterial communities. Low organic matter content correlated with the communities from industrial vacant lots and roadsides (**Fig. 3F**).
+For bacterial communities, DNA metabarcoding yielded 16,306 ASVs. Of these, 44% were found only in urban habitats (parks, roadsides, residential lots and industrial lots), 31% occurred only in pre-urban habitats (forests and meadows) and 25% were shared by both urban and pre-urban habitats (**Fig3C**). The average number of ASVs per plot was 1769 (min = 1478, max = 2074), with the habitat averages decreasing from roadsides (1848) to industrial lots (1794), residential lots (1792), meadows (1775), parks (1706) and forests (1697). The majority of ASVs were assigned to Proteobacteria (22%), Planctomycetota (15%), Actinobacteriota (15%) and Acidobacteriota (10%). Compared to other habitats, forests had higher proportions of Proteobacteria and Acidobacteriota, a lower proportion of Actinobacteriota, and a similar proportion of Planctomycetota. PERMANOVA performed on the presence/absence of ASVs indicated significant differences in composition between habitats (100,000 permutations, R^2^ = 0.32, F = 2.51, p = \< 0.001). The NMDS ordination of the bacterial ASV composition (**Fig. 3F**) resulted in less grouping by habitat than for plants and fungi, but still reflected a main compositional gradient from forests to industrial vacant plots. As in the case of the fungal communities, environmental fitting of the soil property axes PC1, PC2, and PC3 onto the ordination indicated that only PC2 (mainly explained by organic matter) had a significant correlation (R^2^ = 0.39, p = 0.001) with the bacterial community composition. Low organic matter content correlated with the communities from industrial vacant lots and roadsides (**Fig. 3F**).
 
 ```{r fig3, echo = FALSE, fig.cap = "Plant, fungal and bacterial diversity across habitats. Top panels show Venn plots for the shared numbers of (A) plant species, (B) fungal ASVs and (C) bacterial ASVs between pre-urban (forests, meadows) and urban (parks, roadsides, residential lots and industrial lots) habitats. Bottom panels show biplots of community composition ordination produced by Non-metric Multi-Dimensional Scaling (NMDS). The NMDS were conducted for (D) the plant survey (by species presence/absence), (E) the soil fungal survey (by ASV presence/absence) and (F) the soil bacterial survey (by ASV presence/absence). Colors indicate the habitat. In the biplots, arrows and labels indicate soil variables with a significant correlation with the composition of the communities."}
 knitr::include_graphics("../results/figures/Fig3.png")
@@ -116,7 +116,7 @@ knitr::include_graphics("../results/figures/Fig3.png")
 
 ## Compositional novelty across habitats and taxonomic groups
 
-We used the NMDS multidimensional compositional distance (calculated from the ordinations in **Fig. 3D-F**) from each of the urban plots (i.e., park, roadside, residential or industrial) to the centroid of the two reference pre-urban habitats (i.e., forests and meadows) to calculate a compositional novelty index (**Fig. 4**). Novelty was significantly different between taxonomic groups (F = 40.67, p \< 0.001), being higher for plants (2.37 ± 0.34 S.E.) than for fungi (2.15 ± 0.40 S.E.) and bacteria (1.56 ± 0.30 S.E.). Novelty was also significantly different depending on the pre-urban habitat that was used as a reference (F = 227.99, p \< 0.001), being higher compared to forests (2.60 ± 0.28 S.E.) than to meadows (1.46 ± 0.28 S.E.). Nonetheless, for each taxonomic group, there was a high positive correlation between the novelty compared against forests and meadows (r = 0.5 for plants; 0.7 for fungi; 0.9 for bacteria). Different urban habitats also differed significantly in their novelty (F = 10.06, p = 0.001), being higher in industrial vacant lots (2.39 ± 0.32 S.E.) than in roadsides (2.17 ± 0.36 S.E.), parks (1.88 ± 0.42 S.E.) and residential vacant lots (1.66 ± 0.34 S.E.). Of the soil physicochemical properties (i.e., the Pb, organic matter, and Mg axes), only Mg had a marginally significant positive effect on compositional novelty (F = 5.63, p = 0.03).
+We used the NMDS multidimensional compositional distance from each of the urban plots (i.e., park, roadside, residential or industrial) to the centroid of the two reference pre-urban habitats (i.e., forests and meadows) to calculate a compositional novelty index (**Fig. 4**). Novelty was significantly different between taxonomic groups (F = 40.67, p \< 0.001; see **Supplementary material 3** for full details of the Linear Mixed Model), being higher for plants (2.37 ± 0.34 S.E.) than for fungi (2.15 ± 0.40 S.E.) and bacteria (1.56 ± 0.30 S.E.). Novelty was also significantly different depending on the pre-urban habitat that was used as a reference (F = 227.99, p \< 0.001), being higher compared to forests (2.60 ± 0.28 S.E.) than to meadows (1.46 ± 0.28 S.E.). Nonetheless, for each taxonomic group, there was a high positive correlation between the novelty compared against forests and meadows (r = 0.5 for plants; 0.7 for fungi; 0.9 for bacteria). Different urban habitats also differed significantly in their novelty (F = 10.06, p = 0.001), being higher in industrial vacant lots (2.39 ± 0.32 S.E.) than in roadsides (2.17 ± 0.36 S.E.), parks (1.88 ± 0.42 S.E.) and residential vacant lots (1.66 ± 0.34 S.E.). Of the soil physicochemical properties (i.e., the Pb, organic matter, and Mg axes), only Mg had a marginally significant positive effect on compositional novelty (F = 5.63, p = 0.03).
 
 ```{r fig4, echo = FALSE, fig.cap = "Compositional novelty for plants, fungi and bacteria. Compositional novelty was calculated as the NMDS multidimensional distance from each urban plot to the centroid of two reference pre-urban habitats (forests, panels A-C-E; and meadows, panels B-D-F). Novelty was calculated separately for plants (panels A-B), fungi (panels C-D) and bacteria (panels E-F)."}
 knitr::include_graphics("../results/figures/Fig4.png")
@@ -145,7 +145,8 @@ Our results highlight the effect of habitat type as a major driver of urban comm
 
 # Supplementary
 
-**Appendix S1** Extended methodology for the soil DNA metabarcoding analysis.
+**Supplementary material 1** Extended methodology for the soil DNA metabarcoding analysis.
 
-**Appendix S2** Principal Component Analysis and correlation analysis of the soil physicochemical properties.
+**Supplementary material 2** Principal Component Analysis and correlation analysis of the soil physicochemical properties.
 
+**Supplementary material 3** Full results of the Linear Mixed Model.
